# PDF_RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/embeddings/: embedder.py
src/generation/: answer_generator.py  prompt.py
src/ingestion/: __init__.py  chunker.py  pdf_loader.py  section_parser.py
src/retriever/: section_retriever.py
tests/: minimal_bge_test.py  test_generator_api.py  test_retriever_faiss.py
